Aligned opener section of page

--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@ body {
     display: flex;
     gap: 25px;
 }
+
+.opener {
+    display: flex;
+}
+
+.opener-block {
+    display: flex;
+    flex-direction: column;
+}
