--- a/style.css
+++ b/style.css
@@ -44,3 +44,13 @@ body {
 .speaker{
     align-self: flex-end;
 }
+
+.sign-up-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+}
