--- a/style.css
+++ b/style.css
@@ -4,17 +4,30 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
     display: flex;
-    justify-content: center;
-    gap: 250px;
+    justify-content: space-around;
+    background-color: #1F2937;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
 }
 
 .header-links {
     display: flex;
     gap: 25px;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    color: #E5E7EB;
 }
 
 .opener {
