--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*.header-opener{
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+}
+*/
 .header {
     display: flex;
     justify-content: space-around;
@@ -32,11 +39,21 @@ a {
 
 .opener {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    height: 300px;
 }
 
 .opener-block {
     display: flex;
     flex-direction: column;
+}
+
+.opener-main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
 }
 
 .random-info {
