--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     justify-content: space-around;
     background-color: #1F2937;
+    padding-top: 20px;
 }
 
 .header-logo {
@@ -43,6 +44,7 @@ a {
     align-items: center;
     background-color: #1F2937;
     height: 500px;
+    gap: 50px;
 }
 
 .opener-text-block {
@@ -75,6 +77,17 @@ a {
     margin-top: 10px;
     border-radius: 5px;
     border-color: #3882F6;
+}
+
+.opener-image {
+    width: 500px;
+    height: 250px;
+    background-color: gray;
+    text-decoration: none;
+    color:#F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .random-info {
