--- a/style.css
+++ b/style.css
@@ -135,11 +135,29 @@ a {
 
 .quote-block {
     display: flex;
+    background-color: #E5E7EB;
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-speaker {
+    display: flex;
     flex-direction: column;
+    width: 825px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
 }
 
 .speaker{
     align-self: flex-end;
+    font-weight: bolder;
+    font-size: 20px;
 }
 
 .sign-up-bar {
