--- a/style.css
+++ b/style.css
@@ -216,4 +216,8 @@ a {
 .footer {
     display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #E5E7EB;
+    height: 70px;
 }
